[gd_scene load_steps=3 format=3 uid="uid://da3rp4rcvilip"]

[ext_resource type="Script" uid="uid://btguo7j8j6td0" path="res://Weapons/Projectile/Projectile.gd" id="1_eb0ab"]

[sub_resource type="SphereShape3D" id="SphereShape3D_nqngp"]

[node name="Projectile" type="Area3D"]
script = ExtResource("1_eb0ab")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_nqngp")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ProjectileLight" type="OmniLight3D" parent="."]
visible = false

[node name="ProjectileSprite" type="Sprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
billboard = 1
texture_filter = 0

[connection signal="timeout" from="AnimationTimer" to="." method="ProjectileAnimation"]
